# jupytext-smart-glob

./: .pre-commit-hooks.yaml  Pipfile  README.md  jupytext_smart_glob.py  pyproject.toml  setup.py  test_jupytext_smart_glob.py
jupytext_smart_glob/: __main__.py  cli.py  test_transform.py  transform.py
